# detmap

./: README.md  pyproject.toml
data/: constellation_systems-A-B-D.tle
src/detmap/: __init__.py  annotation.py  base.py  dmap.py  quantification.py  special.py  visual.py
src/detmap/maps/: __init__.py  bitmap.py  clustdetmap.py  detsfcmap.py  dhiemap.py  dmap.py  drotmap.py
src/satellitic/: constellation.py  dhiemap.py  drotmap.py  interactions.py  reduce.py  simulation.py  special.py
